--- a/WebCrawler/WebCrawler.csproj
+++ b/WebCrawler/WebCrawler.csproj
@@ -9,6 +9,7 @@
     <PackageReference Include="HtmlAgilityPack" Version="1.11.2" />
     <PackageReference Include="Selenium.WebDriver" Version="3.141.0" />
     <PackageReference Include="Selenium.WebDriver.ChromeDriver" Version="73.0.3683.68" />
+	<DotNetCliToolReference Include="Microsoft.EntityFrameworkCore.Tools.DotNet" Version="2.0.1" />
   </ItemGroup>
 
 </Project>
